# jimbot

./: .clang-format  .clang-tidy  .dockerignore  .env.example  .eslintrc.json  .flake8  .gitignore  .luacheckrc  .markdownlint.json  .pre-commit-config.yaml  .prettierrc.json  .sqlfluff  .stylua.toml  .yamllint  CHANGELOG_LUA_DOCKER.md  CI-FAILURE-ANALYSIS-COMPLETE.md  CI-IMPROVEMENTS-SUMMARY.md  CI_DEPENDENCIES_ANALYSIS.md  CI_MIGRATION_GUIDE.md  CLAUDE.md  Cargo.toml.template  Dockerfile.ci-unified  Dockerfile.ci.simple  Dockerfile.dev  Dockerfile.rust-template  HEADLESS_MOD_USAGE.md  LICENSE  Makefile  PR_205_FIXES_SUMMARY.md  README.md  STYLE_GUIDE.md  architecture_summary.md  balatro  balatro_rust_emulator_spec.md  balatro_status.sh  buf.gen.python.yaml  buf.gen.typescript.yaml  buf.yaml  ci-analysis.md  ci-failure-cascade-analysis.md  (+24 more)
.github/: README.md  dependabot.yml  renovate.json  requirements-lint-python.txt  tool-versions.yml
.github/workflows/: CI_CACHING_STRATEGY.md  QUALITY_CHECKS_TODO.md  README.md  ci-health-monitor.yml  ci-integration-scheduled.yml  ci-integration.yml  ci-metrics.yml  ci-quick.yml  ci-tests.yml  ci.yml  code-quality.yml  cpp-ci.yml  docker-ci-only.yml  docker-ci.yml  gpu-tests.yml  lua-ci.yml  main-ci-hybrid.yml  main-ci-improved.yml  main-ci.yml  release.yml  rust-basic.yml  rust-build.yml  rust-ci-cd.yml  rust-ci.yml
.github/workflows-archive/: ci-health-check.yml  ci-quick.yml  docker-ci.yml  lua-ci.yml  main-ci.yml  rust-basic.yml  rust-ci-cd.yml  rust-security.yml
ci/: rust-caching.md
ci-test-env/: pyvenv.cfg
ci/dashboard/: index.html
ci/monitoring/: analyze_metrics.py  collect_metrics.py  generate_dashboard.py  send_alerts.py
ci/scripts/: memgraph-health-check.sh  run-integration-tests.sh  run-lua-tests.sh  run-python-tests.sh  run-rust-tests.sh
ci/tests/: sample_analysis.json  sample_analysis_no_alerts.json  test_send_alerts.py
config/: buf.gen.rust.yaml  buf.yaml  mypy.ini
docker/: Dockerfile.ci  Dockerfile.ci-unified  Dockerfile.ci.simple  Dockerfile.dev  Dockerfile.lua-test  Dockerfile.rust-builder  Dockerfile.rust-template  README.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.lua-test.yml  docker-compose.minimal.yml  docker-compose.override.yml.example  test-buildkit-cache.sh
docker/scripts/: run_lua_tests.sh  run_lua_tests_dev.sh
docs/: CI_MONITORING.md  CI_RATE_LIMITING.md  DEVELOPMENT_TOOLS.md  DOCKER_MINIMAL_SETUP.md  RATE_LIMITING_IMPLEMENTATION.md  README.md  WINDOWS_INTEGRATION.md  cicd-best-practices.md  cicd-setup-guide.md  issue_145_additional_retriggers.md  issue_145_performance_analysis.md  lua_style_guide.md  protobuf-examples.md  protocol-buffers-style-guide.md  rust-setup.md
docs/design/: analylitcs_dev_plan.md  balatro_issues_commands.md  balatro_rust_emulator_spec.md  bug_score_message.md  (+12 more)
examples/: rate_limiting_demo.py
jimbot/: CLAUDE.md  README.md  __init__.py
jimbot/infrastructure/resource_coordinator_rust/: Cargo.toml  build.sh
jimbot/infrastructure/resource_coordinator_rust/benches/: performance.rs
jimbot/infrastructure/resource_coordinator_rust/src/: allocator.rs  config.rs  lib.rs  main.rs  metrics.rs  rate_limiter.rs  server.rs
jimbot/memgraph/mage_modules/: Cargo.toml  card_analyzer.cpp
jimbot/memgraph/mage_modules/src/: lib.rs  synergy_calculator.rs  victory_path_analyzer.rs
planning/: README.md  analylitcs_dev_plan.md  balatro_issues_commands.md  balatro_modding_api_reference.md  bug_score_message.md  bug_state_labels.md  event_bus_phases.md  github_issues_action_plan.md  github_issues_execution_report.md  github_issues_mcp.md  github_issues_plan.md  github_issues_reconciliation.md  headless_dev_plan.md  interface_specification.md  knowledge_graph_dev_plan.md  langchain_dev_plan.md  mcp_dependency_graph.md  mcp_dev_plan.md  ray_rllib_dev_plan.md  rust_migration_plan.md  rust_migration_summary.md  sprint_plan_revised.md  timeline_reconciliation.md  top_level_plan.md
proto/: README.md  examples.md  generate_code.sh  validation.md
scripts/: README.md  balatro_status.sh  build-ci-image.sh  ci-status-report.py  docker-entrypoint.sh  enhanced-ci-monitor.py  migrate-ci.sh  migrate-to-rate-limited-notifications.py  run-ci-docker.sh  rust-pre-commit.sh  setup-dev-env.sh  stop_balatro.sh  test-lua-docker.sh  test_dependencies.py  update_ci_versions.sh  validate_ci.py
services/balatro-emulator/: .gitignore  Cargo.toml  README.md
services/balatro-emulator/benches/: rng_performance.rs
services/balatro-emulator/src/: lib.rs
services/balatro-emulator/src/utils/: mod.rs  rng.rs
services/balatro-emulator/tests/: integration_tests.rs
services/balatro-emulator/tests/integration/: mod.rs  test_rng_integration.rs
services/balatro-emulator/tests/unit/: mod.rs  test_rng.rs
services/event-bus-rust/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  fix_event_bus.patch  run-integration-tests.sh  run-tests.sh
services/event-bus-rust/benches/: event_throughput.rs
services/event-bus-rust/config/: .gitignore  README.md  default.yaml  dev.yaml  prod.yaml  staging.yaml
services/event-bus-rust/docs/: EDGE_CASE_TESTING.md
services/event-bus-rust/scripts/: build.sh  load_test.sh  run_edge_case_tests.sh  test_event_bus.sh
services/event-bus-rust/src/: main.rs  metrics.rs  tracing_config.rs
services/event-bus-rust/src/api/: handlers.rs  health.rs  mod.rs  models.rs
services/event-bus-rust/src/config/: mod.rs
services/event-bus-rust/src/grpc/: mod.rs
services/event-bus-rust/src/proto/: converter.rs  mod.rs
services/event-bus-rust/src/routing/: mod.rs
services/event-bus-rust/tests/: edge_case_tests.rs  integration_test.rs  load_tests.rs  resilience_tests.rs  security_tests.rs
test-event-receiver/: Dockerfile  requirements.txt  server.py  test_integration.py
tests/: README.md  README_game_state_fix.md  run_all_tests.lua  run_comprehensive_tests.lua  run_tests.lua  test_ci_monitoring.py  test_enhanced_notifications.py  test_game_state_extractor.lua  test_game_state_integration.lua  test_helper.lua  test_rate_limiter.py
(+320 files in other folders)
