[package]
name = "event-bus-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework for REST API
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "timeout"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.30"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
futures = "0.3"
lazy_static = "1.4"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# OpenTelemetry for distributed tracing
opentelemetry = { version = "0.30", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "metrics", "logs", "trace"] }
opentelemetry-semantic-conventions = "0.30"

# Configuration management
config = { version = "0.14", default-features = false, features = ["yaml", "toml", "json"] }
figment = { version = "0.10", features = ["yaml", "toml", "json", "env"] }
notify = "8.1"
validator = { version = "0.19", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio-test = "0.4"
criterion = "0.6"