[package]
name = "memgraph-mage-modules"
version = "0.1.0"
edition = "2021"

[lib]
name = "mage_modules"
crate-type = ["cdylib"]

[dependencies]
# Memgraph MAGE API bindings (when available)
# mage-rs = "0.1"

# For now, we'll use these dependencies
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "synergy_bench"
harness = false